# zk-activity

./: .gitignore  888224317991706685-radar-backup-20240524.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE.md  README.md  docker-compose.yaml  migration.ts  package-lock.json  package.json  tsconfig.json
.claude/: settings.json
.claude/agents/: architect-planner.md  code-reviewer.md  documentation-writer.md  error-resolver.md  (+1 more)
docs/: announcement.md  env.sample  r2z2-migration.md
killbot-rust/: Cargo.toml  Dockerfile.rust
killbot-rust/src/: commands.rs  config.rs  discord_bot.rs  esi.rs  lib.rs  main.rs  models.rs  processor.rs  redis_q.rs
killbot-rust/src/commands/: diag.rs  subscribe.rs  unsubscribe.rs
killbot-rust/tests/: subscription_test.rs
resources/: 106140056_small_bubble.json  115769073_ostingele.json  115787551_astrahus.json  115797013_guardian_fight.json  119689329_nid_solo.json  130734446_unknown_group_test.json  131126432_keepstar_kill.json  131501165_drill_kill.json  132235921_supers_involved.json  132249213_naglfar_loss.json  132253134_drill_kill_by_thanatos.json  132302304_caps_attacking.json  132461133_ceptor_npc_test.json  132462203_global_feed_test.json  132467594_dictor_af_tie.json  132817097_npc_priority_test.json  response_1710785570856.json
scripts/: config-schema-migration.ts  fetch-killmail.sh  ship_id_to_group_id.py
src/: commands.rs  config.rs  discord_bot.rs  esi.rs  index.ts  lib.rs  models.rs  pipeline.rs  processor.rs  redis_q.rs  zKillSubscriber.ts
tests/: test_killfeed_embeds.rs  test_tracking_embeds.rs
(+45 files in other folders)
