[package]
name = "killbot-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.14", default-features = false, features = ["json", "rustls-tls"] }
rand = "0.8.5"
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.13"
moka = { version = "0.10", features = ["future"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
futures = "0.3"